# video-insight

./: .gitignore  AGENTS.md  CLAUDE.md  SKILL.md  justfile
.agents/skills/issue-to-pr/: SKILL.md
.github/workflows/: build-images.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202606190001_create_learning_materials.py  202606210001_add_user_admin_flag.py  202606220001_add_groups.py  a9a50ffd3ced_add_annotation_preview_fields.py
backend/app/: main.py
backend/app/api/: annotations.py  auth.py  groups.py  router.py  videos.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  annotation.py  base.py  group.py  user.py  video.py
backend/app/repositories/: __init__.py  annotation_repo.py  group_repo.py  user_repo.py  video_repo.py
backend/app/schemas/: __init__.py  annotation.py  auth.py  common.py  group.py  video.py
backend/app/services/: __init__.py  admin_seed.py  annotation_service.py  auth_service.py  group_service.py  storage_service.py  video_service.py
backend/scripts/: start-dev.sh
backend/tests/: test_auth_service.py  test_health.py
docker/: .env.dev  .env.example  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml
docs/: deployment.md
frontend/: .dockerignore  .oxlintrc.json  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: app.css  main.tsx  routeTree.gen.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/routes/: __root.tsx  index.tsx  login.tsx
scripts/: deploy-prod.sh  dev.sh
(+11 files in other folders)
