[project]
name = "videoinsight-backend"
version = "0.1.0"
description = "VideoInsight backend service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "RUF",   # ruff-specific
]
ignore = [
    "S101",   # assert allowed in tests
    "B008",   # function call in default arg (needed for Depends())
    "UP046",  # Generic[T] subclass needed for Pydantic BaseModel
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"alembic/**" = ["N999"]

[tool.ruff.format]
quote-style = "double"

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# ty
[tool.ty.environment]
python-version = "3.12"
